Refactor ProductService and ProductRepository: Simplify purchase logic, enhance product retrieval, and remove commented code